--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <!-- Фото -->
                     <div id="photo">
                         <img
-                            src="https://preview.redd.it/nemfei9q0ucf1.jpeg?width=640&crop=smart&auto=webp&s=ac54e9947dabc48041102067ca48330309f2117e"
+                            src="photo.png"
                             alt="Фото профиля"
                         />
                     </div>
@@ -633,7 +633,7 @@
                                 >
                                     byronbrawlstars.designscape@gmail.com
                                 </div>
-                                <!-- Добавляем кнопку здесь -->
+                                <!-- Кнопка загрузки резюме в PDF -->
                                 <button id="download-pdf" class="download-btn">
                                     Download PDF
                                 </button>
@@ -643,8 +643,12 @@
                 </div>
             </div>
         </div>
+        
         <script src="js/interestsResize.js"></script>
         <script src="js/resumeEditor.js"></script>
+        <script src="js/pdfGenerator.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
         <script src="js/pdfGenerator.js"></script>
     </body>
 </html>
